--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # If you want to install this jekyll in a subpath (eg /digitalgarden) set it here. 
 # Else keep it Empty (DON'T PUT /; Keep it empty)
-baseurl: ""
+baseurl: "/myrrhina"
 
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
-heading: Jekyll Garden # Change this 
+heading: Mysteries of Myrrhina, a West Marches Experiment for Shopifolk
 content: Obsidian ready Jekyll Theme
 copyright:  
   year: © 2022
