--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ baseurl: "/myrrhina"
 
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
-heading: Mysteries of Myrrhina, a West Marches Experiment for Shopifolk
+heading: Mysteries of Myrrhina
 content: Obsidian ready Jekyll Theme
 copyright:  
   year: © 2022
