--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ baseurl: "/myrrhina"
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
 heading: Mysteries of Myrrhina
+subheading: A West Marches Experiment for Shopifolk
 content: Obsidian ready Jekyll Theme
 copyright:  
   year: © 2022
