that kinda worked

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,7 +90,9 @@
   "active": "f66920071382c6e5",
   "lastOpenFiles": [
     "rules/Character Creation.md",
-    "_notes/Public/Getting Started.md",
-    "_notes/Public/House Rules.md"
+    "pages/posts.md",
+    "_posts/2020-03-01-features.md",
+    "_notes/Public/House Rules.md",
+    "_notes/Public/Getting Started.md"
   ]
 }
