--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,6 +90,9 @@
   "active": "f66920071382c6e5",
   "lastOpenFiles": [
     "rules/Character Creation.md",
+    "pages/index.md",
+    "pages/lists.md",
+    "pages/notes.md",
     "pages/posts.md",
     "_posts/2020-03-01-features.md",
     "_notes/Public/House Rules.md",
