--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "rules/House Rules.md",
+            "file": "README.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "rules/House Rules.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "f66920071382c6e5",
   "lastOpenFiles": [
-    "rules/House Rules.md",
-    "rules/Character Creation.md",
+    "README.md",
+    "Home.md",
     "_notes/Public/Getting Started.md",
-    "_notes/Public/House Rules.md",
-    "_notes/Public/Markdown Rendered.md",
-    "_notes/Public/Shops.md",
-    "_notes/Public/What is West Marches?.md",
-    "_posts/2020-03-01-features.md",
     "_posts/2020-03-01-how-to.md",
-    "pages/index.md"
+    "_posts/2020-03-01-features.md",
+    "pages/lists.md",
+    "pages/404.md",
+    "pages/notes.md",
+    "pages/posts.md",
+    "rules/Character Creation.md"
   ]
 }
