--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Home.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Home.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +89,8 @@
   },
   "active": "f66920071382c6e5",
   "lastOpenFiles": [
-    "README.md",
     "Home.md",
+    "README.md",
     "_notes/Public/Getting Started.md",
     "_posts/2020-03-01-how-to.md",
     "_posts/2020-03-01-features.md",
