--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,9 @@
 {
-  "legacyEditor": false
+  "legacyEditor": false,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "2",
+    "downscalePercent": 100
+  }
 }
