--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -95,9 +95,9 @@
     "places/worlds/Qigang.md",
     "places/worlds/Profugae.md",
     "places/worlds/Nevermelt.md",
+    "places/worlds/Myrrhina.md",
     "places/worlds/Mortuus Rex.md",
     "places/worlds/Langsevain.md",
-    "places/worlds/Emerraine.md",
     "places/worlds/Khashayar.md"
   ]
 }
