--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "places/worlds/Arborisle.md",
+            "file": "places/worlds/Tertara.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "places/worlds/Arborisle.md",
+                "file": "places/worlds/Tertara.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "46f752eca59152ba",
   "lastOpenFiles": [
-    "places/worlds/Arborisle.md",
-    "places/worlds/Emerraine.md",
-    "places/worlds/Khashayar.md",
-    "places/worlds/Langsevain.md",
-    "rules/Homeworlds of the Races.md",
-    "places/worlds/Profugae.md",
-    "rules/House Rules.md",
     "places/worlds/Tertara.md",
     "places/worlds/Strafmack.md",
-    "places/worlds/Shubae.md"
+    "places/worlds/Shubae.md",
+    "places/worlds/Qigang.md",
+    "places/worlds/Profugae.md",
+    "places/worlds/Nevermelt.md",
+    "places/worlds/Myrrhina.md",
+    "places/worlds/Mortuus Rex.md",
+    "places/worlds/Langsevain.md",
+    "places/worlds/Khashayar.md"
   ]
 }
