--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "calendars/Xuartlek Imperial Calendar.md",
+            "file": "rules/Homeworlds of the Races.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "calendars/Xuartlek Imperial Calendar.md",
+                "file": "rules/Homeworlds of the Races.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,8 +88,8 @@
   },
   "active": "46f752eca59152ba",
   "lastOpenFiles": [
-    "calendars/Myrrhina Prime Calendar.md",
     "calendars/Xuartlek Imperial Calendar.md",
+    "calendars/Myrrhina Prime Calendar.md",
     "rules/House Rules.md",
     "rules/Character Creation.md",
     "rules/Homeworlds of the Races.md",
